--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,6 +116,7 @@ const features = [
 				line-height: 1.6;
 				color: var(--tetra-primary);
 				background-color: var(--tetra-gray);
+				padding-top: 80px; /* Account for fixed navigation */
 			}
 
 			.container {
