--- a/src/pages/strategies.astro
+++ b/src/pages/strategies.astro
@@ -65,6 +65,7 @@ const jsonLd = {
 				line-height: 1.6;
 				color: #333;
 				background-color: #fafafa;
+				padding-top: 80px; /* Account for fixed navigation */
 			}
 			
 			.container {
