--- a/src/pages/learn/index.astro
+++ b/src/pages/learn/index.astro
@@ -31,6 +31,7 @@ const canonicalURL = "https://aiperformanceoptimization.com/learn";
     ctaText="Browse Learning Resources"
     ctaLink="#learning-resources"
     showCta={false}
+    size="medium"
   />
 
   <Section id="learning-resources">
